--- a/punajut/src/main/webapp/index.html
+++ b/punajut/src/main/webapp/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-        <title>GoTaravel</title>
+        <title>GoTravel</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
         <link href="resources/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
@@ -26,87 +26,105 @@
 
         <script src="src/app.js" type="text/javascript"></script>
 
-        <!-- se gregan todas los archivos JavaScript de cada modulo que necesita el index.-->
+        <!-- se agregan todas los archivos JavaScript del modulo USUARIO -->
         <script src="src/modules/usuario/usuario.mod.js" type="text/javascript"></script>
         <script src="src/modules/usuario/usuario.ctrl.js" type="text/javascript"></script>
         <script src="src/modules/usuario/usuario.svc.js" type="text/javascript"></script>
         <script src="src/modules/usuario/usuario.mock.js" type="text/javascript"></script>
 
+        <!-- se agregan todas los archivos JavaScript del modulo ITINERARIO -->
+        <script src="src/modules/usuario/crearItinerario.ctrl.js" type="text/javascript"></script>
+        <script src="src/modules/usuario/crearItinerario.svc.js" type="text/javascript"></script>
 
+        <!-- se agregan todas los archivos JavaScript del modulo FORO -->
+        <script src="src/modules/usuario/foro.mod.js" type="text/javascript"></script>
+        <script src="src/modules/usuario/foro.ctrl.js" type="text/javascript"></script>
+        <script src="src/modules/usuario/foro.svc.js" type="text/javascript"></script>
+        <script src="src/modules/usuario/foro.mock.js" type="text/javascript"></script>
+
+        <!-- se agregan todas los archivos JavaScript del modulo EVENTO MANEJO -->
+        <script src="src/modules/usuario/itinerarioYmapa.mod.js" type="text/javascript"></script>
+        <script src="src/modules/usuario/itinerarioYmapa.ctrl.js" type="text/javascript"></script>
+
+        <!-- se agregan todas los archivos JavaScript del modulo COMUNIDAD -->
+        <script src="src/modules/usuario/comunidad.mod.js" type="text/javascript"></script>
+        <script src="src/modules/usuario/comunidad.ctrl.js" type="text/javascript"></script>
+        <script src="src/modules/usuario/comunidad.svc.js" type="text/javascript"></script>
+        <script src="src/modules/usuario/comunidad.mock.js" type="text/javascript"></script>
 
     </head>
     <body style="padding-top: 60px;">
         <div class="container-fluid">
-                <!-- Navigation -->
-                <a id="menu-toggle" href="#" class="btn btn-dark btn-lg toggle"><i class="fa fa-bars"></i></a>
-                <nav id="sidebar-wrapper">
-                    <ul class="sidebar-nav">
-                        <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
-                        <li class="sidebar-brand">
-                            <a href="#top"  onclick = $("#menu-close").click(); >Menu</a>
-                        </li>
-                        <li>
-                            <a href="#top" onclick = $("#menu-close").click(); >Home</a>
-                        </li>
-                        <li>
-                            <a href="#about" onclick = $("#menu-close").click(); >About</a>
-                        </li>
-                        <li>
-                            <a href="#services" onclick = $("#menu-close").click(); >Services</a>
-                        </li>
-                        <li>
-                            <a href="#portfolio" onclick = $("#menu-close").click(); >Portfolio</a>
-                        </li>
-                        <li>
-                            <a href="#contact" onclick = $("#menu-close").click(); >Contact</a>
-                        </li>
-                    </ul>
-                </nav>
+            <!-- Navigation -->
+            <a id="menu-toggle" href="#" class="btn btn-dark btn-lg toggle"><i class="fa fa-bars"></i></a>
+            <nav id="sidebar-wrapper">
+                <ul class="sidebar-nav">
+                    <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
+                    <li class="sidebar-brand">
+                        <a href="#top"  onclick = $("#menu-close").click(); >Menu</a>
+                    </li>
+                    <li>
+                        <a href="#top" onclick = $("#menu-close").click(); >Home</a>
+                    </li>
+                    <li>
+                        <a href="#about" onclick = $("#menu-close").click(); >About</a>
+                    </li>
+                    <li>
+                        <a href="#services" onclick = $("#menu-close").click(); >Services</a>
+                    </li>
+                    <li>
+                        <a href="#portfolio" onclick = $("#menu-close").click(); >Portfolio</a>
+                    </li>
+                    <li>
+                        <a href="#contact" onclick = $("#menu-close").click(); >Contact</a>
+                    </li>
+                </ul>
+            </nav>
             <div ui-view></div>
             <div class="col-sm-6">
                 <div ui-view="principal"></div>
             </div>
-                <div ui-view="centro"></div>
+            <div ui-view="centro"></div>
         </div>
 
 
-            <!-- jQuery -->
-    <script src="resources/js/jquery.js" type="text/javascript"></script>
+        <!-- jQuery -->
+        <script src="resources/js/jquery.js" type="text/javascript"></script>
 
-    <!-- Bootstrap Core JavaScript -->    <script src="resources/js/bootstrap.min.js"></script>
-    <script src="resources/js/bootstrap.min.js" type="text/javascript"></script>
+        <!-- Bootstrap Core JavaScript -->    <script src="resources/js/bootstrap.min.js"></script>
+        <script src="resources/js/bootstrap.min.js" type="text/javascript"></script>
 
-    <!-- Custom Theme JavaScript -->
-    <script>
-    // Closes the sidebar menu
-    $("#menu-close").click(function(e) {
-        e.preventDefault();
-        $("#sidebar-wrapper").toggleClass("active");
-    });
+        <!-- Custom Theme JavaScript -->
+        <script>
+                                    // Closes the sidebar menu
+                                    $("#menu-close").click(function (e) {
+                                        e.preventDefault();
+                                        $("#sidebar-wrapper").toggleClass("active");
+                                    });
 
-    // Opens the sidebar menu
-    $("#menu-toggle").click(function(e) {
-        e.preventDefault();
-        $("#sidebar-wrapper").toggleClass("active");
-    });
+                                    // Opens the sidebar menu
+                                    $("#menu-toggle").click(function (e) {
+                                        e.preventDefault();
+                                        $("#sidebar-wrapper").toggleClass("active");
+                                    });
 
-    // Scrolls to the selected menu item on the page
-    $(function() {
-        $('a[href*=#]:not([href=#])').click(function() {
-            if (location.pathname.replace(/^\//, '') == this.pathname.replace(/^\//, '') || location.hostname == this.hostname) {
+                                    // Scrolls to the selected menu item on the page
+                                    $(function () {
+                                        $('a[href*=#]:not([href=#])').click(function () {
+                                            if (location.pathname.replace(/^\//, '') == this.pathname.replace(/^\//, '') || location.hostname == this.hostname) {
 
-                var target = $(this.hash);
-                target = target.length ? target : $('[name=' + this.hash.slice(1) + ']');
-                if (target.length) {
-                    $('html,body').animate({
-                        scrollTop: target.offset().top
-                    }, 1000);
-                    return false;
-                }
-            }
-        });
-    });
-    </script>
+                                                var target = $(this.hash);
+                                                target = target.length ? target : $('[name=' + this.hash.slice(1) + ']');
+                                                if (target.length) {
+                                                    $('html,body').animate({
+                                                        scrollTop: target.offset().top
+                                                    }, 1000);
+                                                    return false;
+                                                }
+                                            }
+                                        });
+                                    });
+        </script>
 
     </body>
 </html>
