--- a/punajut-web/src/main/webapp/index.html
+++ b/punajut-web/src/main/webapp/index.html
@@ -9,17 +9,6 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
         <link href="resources/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
-        <link href="resources/css/stylish-portfolio.css" rel="stylesheet" type="text/css"/>
-        <link href="resources/css/perfil.css" rel="stylesheet" type="text/css"/>
-        <!-- Custom Fonts -->
-        <link href="resources/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
-        <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
-
-        <!-- Esto es necesario para el funcionamiento correcto de ciudad.tpl.html -->
-        <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-        <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-        <link rel="stylesheet" href="resources/css/ciudadStyle.css">
 
         <script src="resources/js/jquery-1.12.0.min.js" type="text/javascript"></script>
         <script src="resources/js/bootstrap.min.js" type="text/javascript"></script>
@@ -31,31 +20,39 @@
 
         <script src="src/app.js" type="text/javascript"></script>
 
-        <!-- se agregan todas los archivos JavaScript del modulo USUARIO -->
+        <!-- se agregan todos los archivos JavaScript de cada modulo que necesita el index -->
         <script src="src/modules/usuario/usuario.mod.js" type="text/javascript"></script>
         <script src="src/modules/usuario/usuario.ctrl.js" type="text/javascript"></script>
         <script src="src/modules/usuario/usuario.svc.js" type="text/javascript"></script>
         <script src="src/modules/usuario/usuario.mock.js" type="text/javascript"></script>
 
-        <!-- se agregan todas los archivos JavaScript del modulo ITINERARIO -->
         <script src="src/modules/usuario/crearItinerario.ctrl.js" type="text/javascript"></script>
         <script src="src/modules/usuario/crearItinerario.svc.js" type="text/javascript"></script>
 
-        <!-- se agregan todas los archivos JavaScript del modulo FORO -->
         <script src="src/modules/usuario/foro.mod.js" type="text/javascript"></script>
         <script src="src/modules/usuario/foro.ctrl.js" type="text/javascript"></script>
         <script src="src/modules/usuario/foro.svc.js" type="text/javascript"></script>
         <script src="src/modules/usuario/foro.mock.js" type="text/javascript"></script>
 
-        <!-- se agregan todas los archivos JavaScript del modulo EVENTO MANEJO -->
         <script src="src/modules/usuario/itinerarioYmapa.mod.js" type="text/javascript"></script>
         <script src="src/modules/usuario/itinerarioYmapa.ctrl.js" type="text/javascript"></script>
 
-        <!-- se agregan todas los archivos JavaScript del modulo COMUNIDAD -->
-        <script src="src/modules/usuario/comunidad.mod.js" type="text/javascript"></script>
-        <script src="src/modules/usuario/comunidad.ctrl.js" type="text/javascript"></script>
-        <script src="src/modules/usuario/comunidad.svc.js" type="text/javascript"></script>
-        <script src="src/modules/usuario/comunidad.mock.js" type="text/javascript"></script>
+        <script src="src/modules/usuario/ciudad.mod.js" type="text/javascript"></script>
+        <script src="src/modules/usuario/ciudad.ctrl.js" type="text/javascript"></script>
+        <script src="src/modules/usuario/ciudad.svc.js" type="text/javascript"></script>
+        <script src="src/modules/usuario/ciudad.mock.js" type="text/javascript"></script>
+
+        <link href="resources/css/stylish-portfolio.css" rel="stylesheet" type="text/css"/>
+        <link href="resources/css/perfil.css" rel="stylesheet" type="text/css"/>
+        <!-- Custom Fonts -->
+        <link href="resources/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
+        <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+
+        <!-- Esto es necesario para el funcionamiento correcto de ciudad.tpl.html -->
+        <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+        <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+        <link rel="stylesheet" href="resources/css/ciudadStyle.css">
 
     </head>
     <body style="padding-top: 60px;">
