--- a/punajut-web/src/main/webapp/index.html
+++ b/punajut-web/src/main/webapp/index.html
@@ -140,15 +140,15 @@
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span>
                             </button>
-                            <a class="navbar-brand" href>BookBasico</a>
+                            <a class="navbar-brand" href>GoTravel</a>
                         </div>
 
                         <!-- Collect the nav links, forms, and other content for toggling -->
                         <div class="collapse navbar-collapse" id="main-bar">
                             <ul class="nav navbar-nav">
-                                <li><a ui-sref="book">Book</a></li>
-                                <li><a ui-sref="editorial">Editorial</a></li>
-                                <li><a ui-sref="author">Author</a></li>
+                                <li><a ui-sref="book">Inicio</a></li>
+                                <li><a ui-sref="editorial">Perfil</a></li>
+                                <li><a ui-sref="itinerarios">Itinerarios</a></li>
                             </ul>
                         </div> <!-- /.navbar-collapse -->
                     </div> <!-- /.container-fluid -->
