--- a/punajut-web/src/main/webapp/index.html
+++ b/punajut-web/src/main/webapp/index.html
@@ -56,9 +56,9 @@
 
     </head>
     <body style="padding-top: 60px;">
-        <div class="container-fluid">
+        <!-- <div class="container-fluid">
             <!-- Navigation -->
-            <a id="menu-toggle" href="#" class="btn btn-dark btn-lg toggle"><i class="fa fa-bars"></i></a>
+            <!-- <a id="menu-toggle" href="#" class="btn btn-dark btn-lg toggle"><i class="fa fa-bars"></i></a>
             <nav id="sidebar-wrapper">
                 <ul class="sidebar-nav">
                     <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
@@ -81,7 +81,7 @@
                         <a href="#contact" onclick = $("#menu-close").click(); >Contact</a>
                     </li>
                 </ul>
-            </nav>
+            </nav> -->
             <!-- <div ui-view></div>
             <div class="col-sm-6">
                 <div ui-view="principal"></div>
@@ -97,7 +97,7 @@
         <script src="resources/js/bootstrap.min.js" type="text/javascript"></script>
 
         <!-- Custom Theme JavaScript -->
-        <script>
+        <!--<script>
                                     // Closes the sidebar menu
                                     $("#menu-close").click(function (e) {
                                         e.preventDefault();
@@ -126,7 +126,7 @@
                                             }
                                         });
                                     });
-        </script>
+        </script> -->
 
         <div class="container-fluid">
             <div class="col-md-12">
