--- a/punajut-web/src/main/webapp/index.html
+++ b/punajut-web/src/main/webapp/index.html
@@ -149,6 +149,8 @@
                                 <li><a ui-sref="PaginaDeInicio">Inicio</a></li>
                                 <li><a ui-sref="usuario">Perfil</a></li>
                                 <li><a ui-sref="CrearIt">Itinerarios</a></li>
+                                <li><a ui-sref="ciudad">Itinerarios</a></li>
+
                             </ul>
                         </div> <!-- /.navbar-collapse -->
                     </div> <!-- /.container-fluid -->
