--- a/punajut-web/src/main/webapp/index.html
+++ b/punajut-web/src/main/webapp/index.html
@@ -91,10 +91,10 @@
 
 
         <!-- jQuery -->
-        <script src="resources/js/jquery.js" type="text/javascript"></script>
+        <!-- <script src="resources/js/jquery.js" type="text/javascript"></script> -->
 
-        <!-- Bootstrap Core JavaScript -->    <script src="resources/js/bootstrap.min.js"></script>
-        <script src="resources/js/bootstrap.min.js" type="text/javascript"></script>
+        <!-- Bootstrap Core JavaScript -->   <!-- <script src="resources/js/bootstrap.min.js"></script>
+        <!-- <script src="resources/js/bootstrap.min.js" type="text/javascript"></script>
 
         <!-- Custom Theme JavaScript -->
         <!--<script>
