--- a/punajut-web/src/main/webapp/index.html
+++ b/punajut-web/src/main/webapp/index.html
@@ -42,7 +42,7 @@
         <script src="src/modules/usuario/ciudad.svc.js" type="text/javascript"></script>
         <script src="src/modules/usuario/ciudad.mock.js" type="text/javascript"></script>
 
-        <link href="resources/css/stylish-portfolio.css" rel="stylesheet" type="text/css"/>
+       <link href="resources/css/stylish-portfolio.css" rel="stylesheet" type="text/css"/>
         <link href="resources/css/perfil.css" rel="stylesheet" type="text/css"/>
         <!-- Custom Fonts -->
         <link href="resources/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
@@ -149,8 +149,7 @@
                                 <li><a ui-sref="PaginaDeInicio">Inicio</a></li>
                                 <li><a ui-sref="usuario">Perfil</a></li>
                                 <li><a ui-sref="CrearIt">Itinerarios</a></li>
-                                <li><a ui-sref="ciudad">Itinerarios</a></li>
-
+                                <li><a ui-sref="ciudad">Prueba ciudad</a></li>
                             </ul>
                         </div> <!-- /.navbar-collapse -->
                     </div> <!-- /.container-fluid -->
