--- a/punajut-web/src/main/webapp/index.html
+++ b/punajut-web/src/main/webapp/index.html
@@ -26,21 +26,21 @@
         <script src="src/modules/usuario/usuario.svc.js" type="text/javascript"></script>
         <script src="src/modules/usuario/usuario.mock.js" type="text/javascript"></script>
 
-        <script src="src/modules/usuario/crearItinerario.ctrl.js" type="text/javascript"></script>
-        <script src="src/modules/usuario/crearItinerario.svc.js" type="text/javascript"></script>
+        <script src="src/modules/itinerario/crearItinerario.ctrl.js" type="text/javascript"></script>
+        <script src="src/modules/itinerario/crearItinerario.svc.js" type="text/javascript"></script>
 
-        <script src="src/modules/usuario/foro.mod.js" type="text/javascript"></script>
-        <script src="src/modules/usuario/foro.ctrl.js" type="text/javascript"></script>
-        <script src="src/modules/usuario/foro.svc.js" type="text/javascript"></script>
-        <script src="src/modules/usuario/foro.mock.js" type="text/javascript"></script>
+        <script src="src/modules/foro/foro.mod.js" type="text/javascript"></script>
+        <script src="src/modules/foro/foro.ctrl.js" type="text/javascript"></script>
+        <script src="src/modules/foro/foro.svc.js" type="text/javascript"></script>
+        <script src="src/modules/foro/foro.mock.js" type="text/javascript"></script>
 
-        <script src="src/modules/usuario/itinerarioYmapa.mod.js" type="text/javascript"></script>
-        <script src="src/modules/usuario/itinerarioYmapa.ctrl.js" type="text/javascript"></script>
+        <script src="src/modules/eventoManejo/itinerarioYmapa.mod.js" type="text/javascript"></script>
+        <script src="src/modules/eventoManejo/itinerarioYmapa.ctrl.js" type="text/javascript"></script>
 
-        <script src="src/modules/usuario/ciudad.mod.js" type="text/javascript"></script>
-        <script src="src/modules/usuario/ciudad.ctrl.js" type="text/javascript"></script>
-        <script src="src/modules/usuario/ciudad.svc.js" type="text/javascript"></script>
-        <script src="src/modules/usuario/ciudad.mock.js" type="text/javascript"></script>
+        <script src="src/modules/ciudad/ciudad.mod.js" type="text/javascript"></script>
+        <script src="src/modules/ciudad/ciudad.ctrl.js" type="text/javascript"></script>
+        <script src="src/modules/ciudad/ciudad.svc.js" type="text/javascript"></script>
+        <script src="src/modules/ciudad/ciudad.mock.js" type="text/javascript"></script>
 
        <link href="resources/css/stylish-portfolio.css" rel="stylesheet" type="text/css"/>
         <link href="resources/css/perfil.css" rel="stylesheet" type="text/css"/>
