--- a/punajut-web/src/main/webapp/index.html
+++ b/punajut-web/src/main/webapp/index.html
@@ -28,6 +28,8 @@
 
         <script src="src/modules/itinerario/crearItinerario.ctrl.js" type="text/javascript"></script>
         <script src="src/modules/itinerario/crearItinerario.svc.js" type="text/javascript"></script>
+       <!-- Falta crearItinerario.mod.js -->
+       <!-- Falta crearItinerario.mock.js -->
 
         <script src="src/modules/foro/foro.mod.js" type="text/javascript"></script>
         <script src="src/modules/foro/foro.ctrl.js" type="text/javascript"></script>
@@ -36,6 +38,9 @@
 
         <script src="src/modules/eventoManejo/itinerarioYmapa.mod.js" type="text/javascript"></script>
         <script src="src/modules/eventoManejo/itinerarioYmapa.ctrl.js" type="text/javascript"></script>
+        <!-- Falta itinerarioYmapa.svc.js -->
+        <!-- Falta itinerarioYmapa.mock.js -->
+
 
         <script src="src/modules/ciudad/ciudad.mod.js" type="text/javascript"></script>
         <script src="src/modules/ciudad/ciudad.ctrl.js" type="text/javascript"></script>
