--- a/punajut-web/src/main/webapp/index.html
+++ b/punajut-web/src/main/webapp/index.html
@@ -26,15 +26,16 @@
         <script src="src/modules/usuario/usuario.svc.js" type="text/javascript"></script>
         <script src="src/modules/usuario/usuario.mock.js" type="text/javascript"></script>
 
-        <script src="src/modules/itinerario/crearItinerario.ctrl.js" type="text/javascript"></script>
-        <script src="src/modules/itinerario/crearItinerario.svc.js" type="text/javascript"></script>
-       <!-- Falta crearItinerario.mod.js -->
-       <!-- Falta crearItinerario.mock.js -->
+        <script src="src/modules/itinerario/itinerario.ctrl.js" type="text/javascript"></script>
+        <script src="src/modules/itinerario/itinerario.svc.js" type="text/javascript"></script>
+        <script src="src/modules/itinerario/itinerario.mod.js" type="text/javascript"></script>
+        <script src="src/modules/itinerario/itinerario.mock.js" type="text/javascript"></script>
 
-        <script src="src/modules/foro/foro.mod.js" type="text/javascript"></script>
+
+<!--        <script src="src/modules/foro/foro.mod.js" type="text/javascript"></script>
         <script src="src/modules/foro/foro.ctrl.js" type="text/javascript"></script>
         <script src="src/modules/foro/foro.svc.js" type="text/javascript"></script>
-        <script src="src/modules/foro/foro.mock.js" type="text/javascript"></script>
+        <script src="src/modules/foro/foro.mock.js" type="text/javascript"></script>-->
 
         <script src="src/modules/eventoManejo/itinerarioYmapa.mod.js" type="text/javascript"></script>
         <script src="src/modules/eventoManejo/itinerarioYmapa.ctrl.js" type="text/javascript"></script>
@@ -45,7 +46,7 @@
         <script src="src/modules/ciudad/ciudad.mod.js" type="text/javascript"></script>
         <script src="src/modules/ciudad/ciudad.ctrl.js" type="text/javascript"></script>
         <script src="src/modules/ciudad/ciudad.svc.js" type="text/javascript"></script>
-        <script src="src/modules/ciudad/ciudad.mock.js" type="text/javascript"></script>
+<!--    Falta     <script src="src/modules/ciudad/ciudad.mock.js" type="text/javascript"></script>-->
 
        <link href="resources/css/stylish-portfolio.css" rel="stylesheet" type="text/css"/>
         <link href="resources/css/perfil.css" rel="stylesheet" type="text/css"/>
@@ -54,9 +55,9 @@
         <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 
         <!-- Esto es necesario para el funcionamiento correcto de ciudad.tpl.html -->
-        <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+<!--        <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-        <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+        <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>-->
         <link rel="stylesheet" href="resources/css/ciudadStyle.css">
 
     </head>
@@ -153,7 +154,7 @@
                             <ul class="nav navbar-nav">
                                 <li><a ui-sref="PaginaDeInicio">Inicio</a></li>
                                 <li><a ui-sref="usuario">Perfil</a></li>
-                                <li><a ui-sref="CrearIt">Itinerarios</a></li>
+                                <li><a ui-sref="itinerario">Itinerarios</a></li>
                                 <li><a ui-sref="ciudad">Prueba ciudad</a></li>
                             </ul>
                         </div> <!-- /.navbar-collapse -->
