--- a/punajut-web/src/main/webapp/index.html
+++ b/punajut-web/src/main/webapp/index.html
@@ -12,6 +12,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
         <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
         <link href="resources/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+        <link href="resources/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
 
         <!-- Optional theme  Boostrap-->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css">
@@ -22,8 +23,9 @@
         <script src="resources/js/ui-bootstrap-tpls-0.13.4.min.js" type="text/javascript"></script>
         <script src="resources/js/angular-mocks.js" type="text/javascript"></script>
         <script src="resources/js/angular-messages.min.js" type="text/javascript"></script>
-
+        <script src="resources/js/bootstrap.min.js" type="text/javascript"></script>
         <!-- APP -->
+        <script src="resources/js/jquery.min.js" type="text/javascript"></script>
         <script src="src/app.js" type="text/javascript"></script>
 
         <!-- se agregan todos los archivos JavaScript de cada modulo que necesita el index -->
